# RunPilot

./: .gitignore  CHANGELOG.md  README.md  TODO.md  gpu_test.yaml  pyproject.toml
.github/workflows/: ci.yml
business/: day1.md
docs/: ARCHITECTURE.md  CLOUD_SYNC_MODEL.md  CONFIG.md  METRICS.md  QUICKSTART.md  RELEASE.md  mvp-v-.1.md  vision.md
src/runpilot/: agent.py  archive.py  cli.py  cli_metrics.py  cloud.py  cloud_client.py  cloud_config.py  config.py  metrics.py  paths.py  project.py  run_manager.py  runner.py  storage.py
tests/: test_archive.py  test_cli_smoke.py  test_config.py  test_config_resolver.py  test_metrics.py  test_runner.py
