[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runpilot"
version = "0.0.1"
description = "RunPilot - a lightweight orchestration tool for reproducible AI training jobs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sam Vain" }
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
runpilot = "runpilot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
